Read more about the Store, Product, and sizing.

--- a/About.html
+++ b/About.html
@@ -79,5 +79,10 @@
             </p>   
             </div> 
         </section>
+        <footer>
+            <p>
+                Designed and Built with Love By Homaira Nabavi
+            </p>
+        </footer>
 </body>
 </html>
