Onling Shopping Platform

--- a/Index.html
+++ b/Index.html
@@ -4,33 +4,133 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Page</title>
+    <style>
+        header{
+            background-color: black;
+            color: white;
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
+        
+        nav{
+            width: 100%;
+            background-color: black;
+            color: white;
+        }
+        #navlinks {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #0c0b0b;
+            position: fixed;
+            width: 98.5%; /* Four links of equal widths */
+            }
+
+        #navlist {
+            float: left;
+            border-right:1px solid #bbb;
+            }
+
+        li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            }
+
+        li a:hover {
+            background-color: #111;
+            }
+
+        main{
+            background-color: rgb(6, 1, 1);
+            color: white;
+            padding-left: 20px;
+            padding-bottom: 20px;
+        }
+
+        footer{
+            background-color: rgb(12, 0, 0);
+            color: white;
+            padding: 5px;
+            text-align: center;
+            height: 100%;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>INTRODUCTION <BR> RED VIOLET BOUTIQUE</h1>
+    <header>
+    <h1> 
+        RED VIOLET BOUTIQUE
+    </h1>
         <P>
             Welcome to Red Violet Boutique, 
             a sanctuary of dreams and elegance that embarked on its journey in 2024 in the heart of British Columbia.
         </P>
+    </header>
+
+<nav>
+    <ul id="navlinks">
+        <li id="navlist"><a href="file:///C:/Users/homai/OneDrive/Desktop/Home-Work/Home-Work/Index.html#home">Home</a></li>
+        <li id="navlist"><a href="file:///C:/Users/homai/OneDrive/Desktop/Home-Work/Home-Work/About.html">About</a></li>
+        <li id="navlist"><a href="file:///C:/Users/homai/OneDrive/Desktop/Home-Work/Home-Work/Contact.html">Contact</a></li>
+        <li id="navlist"><a href="file:///C:/Users/homai/OneDrive/Desktop/Home-Work/Home-Work/Index.html#home">Women Clothings</a></li>
+        <li id="navlist"><a href="file:///C:/Users/homai/OneDrive/Desktop/Home-Work/Home-Work/About.html">Women Shoes</a></li>
+        <li id="navlist"><a href="file:///C:/Users/homai/OneDrive/Desktop/Home-Work/Home-Work/Index.html#home">Women Jewlerys</a></li>
+        <li id="navlist"><a href="file:///C:/Users/homai/OneDrive/Desktop/Home-Work/Home-Work/About.html">Women Accessories</a></li>
+        <li id="navlist"><a href="file:///C:/Users/homai/OneDrive/Desktop/Home-Work/Home-Work/Contact.html">Return Policy</a></li>
+        <li id="navlist"><a href="file:///C:/Users/homai/OneDrive/Desktop/Home-Work/Home-Work/Contact.html">Wishlist</a></li>
+        <li id="navlist"><a href="file:///C:/Users/homai/OneDrive/Desktop/Home-Work/Home-Work/Form.html">My Cart</a></li>
+        <li id="navlist"><a href="file:///C:/Users/homai/OneDrive/Desktop/Home-Work/Home-Work/Form.html">Checkout</a></li>
+      </ul>
+</nav>
+        
+<main>
         <img src="c:\Users\homai\OneDrive\Desktop\My Boutique\9fd389573bfd2e3fc54667965484d015.jpg" alt="images of clothings" style="width:400px;height:400px;">
         <img src="c:\Users\homai\OneDrive\Desktop\My Boutique\edited.jpg" alt="images of clothings" style="width:400px;height:400px;">
         <img src="c:\Users\homai\OneDrive\Desktop\My Boutique\6decfbccbc55070313db22cb0fb694ab.jpg" alt="Pic of Jewlerey" style="width:400px; height: 400px;">
 
-        <section>
-
+    <div class="bg-image">
     <h3>OUR PROCTUCTS</h3>
     <p>Offers a curated selection of unique and high end fashionable:
         <ul>
             <li>women Clothings</li>
             <li>women Shoes</li>
             <li>Women Jewlerey</li>
-            <li>& Other Accessories</li>            
-</p>
-            </section>
+            <li>& Other Accessories</li> 
+        </ul>               
+    </p>
+    <p>
+        In our boutique, we don’t merely create dresses; we sculpt each gown into a unique masterpiece, 
+        a personalized expression of beauty and individuality. <br> Our unwavering commitment to excellence has 
+        cultivated a community of delighted customers who entrust us to bring their dreams to life.<br>
+        Our unwavering commitment to excellence has cultivated a community of delighted customers 
+        who entrust us to bring their dreams to life.<br>Explore our exquisite collection of 
+        exclusive Gala dresses, evening dresses and casual dresses, all available for purchase.<br> 
+        Immerse yourself in the fushion of tradition and modernity.
+    </p>
+</div>
+</main>
 
+<footer>
         <section>
-            <p>To learn more about us, Please click on this Link 
-                <a href="file:///C:/Users/homai/OneDrive/Desktop/Home-Work/About.html" >Our About Page</a>  
-    </p>    
+            <h2>
+                Follow us on
+            </h2>
+            <a href="https://www.facebook.com/">
+            <img src="c:\Users\homai\OneDrive\Desktop\Icons\logo-facebook-facebook-logo-transparent-png-pictures-icons-and-0.png" alt="Facebook" style="width:45px;height:42px;"></a>
+            </a>
+            <a href="https://www.facebook.com/">
+                <img src="c:\Users\homai\OneDrive\Desktop\Icons\Instagram_icon.png.webp" alt="Facebook" style="width:40px;height:40px;"></a>
+            </a>
+            <a href="https://www.facebook.com/">
+                <img src="c:\Users\homai\OneDrive\Desktop\Icons\pinterest-logo-pinterest-transparent-free-png.webp" alt="Facebook" style="width:60px;height:60px;"></a>
+            </a>
+            <p> Built and designed with love by Homaira Nabavi<br> Copy right saved</p>
         </section>
+    </footer>
 </body>
 </html>
