--- a/Contact.html
+++ b/Contact.html
@@ -9,10 +9,15 @@
     <section>
         <div>
             <h1> How to Contact Us</h1>
-            <p>You can contact us via</p>
+            <p>If you have any questions, please feel free to get in touch with us.<br>
+                We will reply to you as soon as possible. Thank you!<br>
+                You can contact us via</p>
             <ul>
-                <li>Email: Homaira.nabavi@outlook.com</li>
                 <li>WhatsApp: 604 500 2212</li>
+                <li>Email: Homaira.nabavi@outlook.com</li>
+                <li>Instagram: Red-Violet-Boutique</li>
+                <li>Pinterest: Red-Violet-Boutique</li>
+                
             </ul>
         </div>
     </section>
